added react and react-dom to the webapp

--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -8,5 +8,9 @@
   "scripts": {
     "dev": "",
     "test": "echo \"Error: run tests from root\" && exit 1"
+  },
+  "dependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   }
 }
