--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -6,11 +6,17 @@
   "author": "",
   "license": "MIT",
   "scripts": {
-    "dev": "",
+    "dev": "parcel src/index.html --port=3001",
+    "build": "tsc",
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
+  },
+  "devDependencies": {
+    "@types/react": "^16.9.49",
+    "@types/react-dom": "^16.9.8",
+    "parcel-bundler": "^1.12.4"
   }
 }
