--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -8,15 +8,22 @@
   "scripts": {
     "dev": "parcel src/index.html --port=3001",
     "build": "tsc",
-    "test": "echo \"Error: run tests from root\" && exit 1"
+    "test": "jest --watch"
   },
   "dependencies": {
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
+    "@testing-library/dom": "^7.24.2",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.0.4",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
-    "parcel-bundler": "^1.12.4"
+    "jest": "^26.4.2",
+    "jsdom": "^16.4.0",
+    "jsdom-global": "^3.0.2",
+    "parcel-bundler": "^1.12.4",
+    "ts-jest": "^26.3.0"
   }
 }
