setup shared library

--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "private": true,
   "scripts": {
     "build:all": "lerna run build --parallel",
+    "build:commons": "lerna run build --scope=@demo/commons",
     "build:server": "lerna run build --scope=@demo/server",
     "build:webapp": "lerna run build --scope=@demo/webapp",
     "dev:all": "lerna run dev --parallel",
     "dev:server": "lerna run dev --scope=@demo/server",
     "dev:webapp": "lerna run dev --scope=@demo/webapp",
     "test:all": "lerna run test --parallel",
+    "test:commons": "lerna run test --scope=@demo/commons",
     "test:server": "lerna run test --scope=@demo/server",
     "test:webapp": "lerna run test --scope=@demo/webapp"
   },
