--- a/packages/commons/package.json
+++ b/packages/commons/package.json
@@ -5,15 +5,17 @@
   "author": "",
   "homepage": "",
   "license": "MIT",
-  "main": "lib/commons.js",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
   },
+  "main": "dist/index",
+  "types": "dist/index",
   "files": [
-    "lib"
+    "dist"
   ],
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: run tests from root\""
   }
 }
