--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -13,6 +13,7 @@
     "test": "echo No tests implemented yet at @demo/server"
   },
   "dependencies": {
+    "@demo/commons": "^0.0.1",
     "express": "^4.17.1",
     "ts-node": "^9.0.0"
   },
