--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -8,9 +8,11 @@
   "scripts": {
     "dev": "parcel src/index.html --port=3001",
     "build": "tsc",
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "serve": "serve -S dist"
   },
   "dependencies": {
+    "@demo/commons": "^0.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
@@ -24,6 +26,7 @@
     "jsdom": "^16.4.0",
     "jsdom-global": "^3.0.2",
     "parcel-bundler": "^1.12.4",
+    "serve": "^11.3.2",
     "ts-jest": "^26.3.0"
   }
 }
