added @demo/math as dependency of @demo/webapp

--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@demo/commons": "^0.1.1",
+    "@demo/math": "^0.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
