added readme and prepublish command to lib dependencies

--- a/packages/commons/package.json
+++ b/packages/commons/package.json
@@ -16,6 +16,7 @@
   ],
   "scripts": {
     "build": "tsc",
+    "prepublish": "yarn build",
     "test": "echo \"Error: run tests from root\""
   }
 }
