fix preinstall hooks

--- a/packages/commons/package.json
+++ b/packages/commons/package.json
@@ -16,7 +16,7 @@
   ],
   "scripts": {
     "build": "tsc",
-    "prepublish": "yarn build",
+    "preinstall": "yarn build",
     "test": "echo \"Error: run tests from root\""
   }
 }
