--- a/packages/commons/package.json
+++ b/packages/commons/package.json
@@ -16,7 +16,11 @@
   ],
   "scripts": {
     "build": "tsc",
+    "clean": "rimraf dist tsconfig.tsbuildinfo",
     "prepublish": "yarn build",
     "test": "echo \"Error: run tests from root\""
+  },
+  "devDependencies": {
+    "rimraf": "^3.0.2"
   }
 }
