--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -9,6 +9,7 @@
   "private": true,
   "scripts": {
     "dev": "ts-node src/index.ts",
+    "clean": "rimraf dist tsconfig.tsbuildinfo",
     "build": "tsc",
     "test": "echo No tests implemented yet at @demo/server"
   },
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
+    "rimraf": "^3.0.2",
     "ts-node": "^9.0.0"
   }
 }
