--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "parcel src/index.html --port=3001",
+    "clean": "rimraf dist .cache tsconfig.tsbuildinfo",
     "build": "tsc",
     "test": "jest --watch",
     "serve": "serve -S dist"
@@ -27,6 +28,7 @@
     "jsdom": "^16.4.0",
     "jsdom-global": "^3.0.2",
     "parcel-bundler": "^1.12.4",
+    "rimraf": "^3.0.2",
     "serve": "^11.3.2",
     "ts-jest": "^26.3.0"
   }
