--- a/packages/webapp/tsconfig.json
+++ b/packages/webapp/tsconfig.json
@@ -7,7 +7,8 @@
     "jsx": "react",
     "outDir": "./dist",
     "rootDir": "./src",
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "noImplicitAny": false
   },
   "include": [
     "src/**/*"
