--- a/packages/commons/package.json
+++ b/packages/commons/package.json
@@ -21,6 +21,7 @@
     "test": "echo \"Error: run tests from root\""
   },
   "devDependencies": {
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "typescript": "^4.0.2"
   }
 }
