--- a/packages/commons/package.json
+++ b/packages/commons/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "build": "tsc",
     "clean": "rimraf dist tsconfig.tsbuildinfo",
-    "preinstall": "yarn build",
+    "preinstall": "tsc",
     "test": "echo \"Error: run tests from root\""
   },
   "devDependencies": {
