--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -6,6 +6,7 @@
     "lib": ["ES2016"],                             /* Specify library files to be included in the compilation. */
     "outDir": "./dist",                        /* Redirect output structure to the directory. */
     "rootDir": "./src",                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
-    "forceConsistentCasingInFileNames": true  /* Disallow inconsistently-cased references to the same file. */
+    "forceConsistentCasingInFileNames": true,  /* Disallow inconsistently-cased references to the same file. */
+    "noImplicitAny": false
   }
 }
